--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 news-bias-model/* filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
